--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,5 @@
     <string name="select_category">Select category</string>
     <string name="view_expense">View expense</string>
     <string name="date_range">Date range</string>
+    <string name="all">All</string>
 </resources>
